--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@ div {
 <script src="JS/script.js"></script>
  <script src="JS/MusicPlayer.js"></script>
     <script src="JS/BoxPlayer.js"></script>
-    <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/DrawSVGPlugin3.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js'></script><script  src="CSS/bongo.js"></script>
+    <script src='JS/line1.js'></script>
+<script src='JS/line2.js'></script>
+<script src='JS/line3.js'></script><script  src="CSS/bongo.js"></script>
 </body>
 </html>
