--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <link rel="stylesheet" href="CSS/color.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <style>
 .screen{
 
@@ -334,8 +333,6 @@ div {
 <script src="JS/script.js"></script>
  <script src="JS/MusicPlayer.js"></script>
     <script src="JS/BoxPlayer.js"></script>
-    <script src='JS/line1.js'></script>
-<script src='JS/line2.js'></script>
-<script src='JS/line3.js'></script><script  src="CSS/bongo.js"></script>
+    <script src='JS/line1.js'></script></script></script><script  src="CSS/bongo.js"></script>
 </body>
 </html>
